Fixed: Single message tick (checkmark) is invisible

--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -344,7 +344,7 @@ $messageDistance: 4PX;
   }
 
   &.out.unread .message__date {
-    background-image: url(~assets/message-status-unread-white@2x.png) !important;
+    background-image: url(~assets/message-status-unread@2x.png) !important;
   }
 
   &.first.out .message {
